--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9209f8e3",
+   "execution_count": 65,
+   "id": "010391a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,14 @@
     "import scipy.stats as stats\n",
     "import seaborn as sns\n",
     "from pydataset import data\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import statistics"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cae4a309",
+   "id": "712b9948",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -26,15 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fba22be6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad23207b",
+   "id": "a2c98086",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +36,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88a139fb",
+   "id": "78726303",
    "metadata": {},
    "source": [
     "H_0: = The network latency has not changed since we switched internet service providers\n",
     "\n",
-    "H_α = The network latency has increased since we switched internet service providers\n",
+    "Hα = The network latency has increased since we switched internet service providers\n",
     "\n",
     "\n",
     "True Positive = determine the network latency has increased and it has\n",
@@ -64,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58b8c3a0",
+   "id": "3555329b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -72,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e321c9a",
+   "id": "0b6cc2ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,10 +74,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc3f06f0",
+   "id": "3a3ffd1a",
    "metadata": {},
    "source": [
-    "H0 = There is no change in daily website visits or visits have decreased since the redesign\n",
+    "H_0 = There is no change in daily website visits or visits have decreased since the redesign\n",
     "\n",
     "Hα = There has been an increase in website visits since redesign\n",
     "\n",
@@ -102,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f021c2e0",
+   "id": "0f9f635e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -110,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a26bd7c3",
+   "id": "ebb769ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,10 +112,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a87b872",
+   "id": "f02509fb",
    "metadata": {},
    "source": [
-    "H0 = Sales are not greater with new ad\n",
+    "H_0 = Sales are not greater with new ad\n",
     "\n",
     "Hα = Sales are greater with new ad\n",
     "\n",
@@ -140,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b866fd48",
+   "id": "e63f7b99",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -148,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff85b619",
+   "id": "ad1afc56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,20 +152,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a750ebc3",
+   "cell_type": "markdown",
+   "id": "8d49b384",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# H_0: The average time it takes to sell home in office #1 == office #2\n",
-    "# Hα: The average time it takes to sell home in office #1 != office #2"
+    " H_0: The average time it takes to sell home at office #1 is the same as (==) office #2\n",
+    " Hα: The average time it takes to sell home at office #1 is not the same (!=) office #2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e328fd0f",
+   "id": "2408cce7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "92e49a70",
+   "id": "4717d5b1",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "08c65746",
+   "id": "6f18b11a",
    "metadata": {},
    "outputs": [
     {
@@ -225,23 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23252eba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b6179d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "435fc881",
+   "id": "86ea2bcc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -249,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c3b81cc1",
+   "id": "e2bad29c",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "08ee9965",
+   "id": "2f97bd9b",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d73ad31e",
+   "id": "479cb6a2",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec03e7f0",
+   "id": "e9aded70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f55e66d",
+   "id": "e05f46bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "36d5e06e",
+   "id": "2f82a81e",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "04fb1cdc",
+   "id": "5892ca05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6e5c356a",
+   "id": "2e1c447f",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "03696f81",
+   "id": "6c77a4ea",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "63a9bac0",
+   "id": "aa2f40e0",
    "metadata": {},
    "outputs": [
     {
@@ -668,13 +643,13 @@
     }
    ],
    "source": [
-    "fe_2008.var()"
+    "fe_2008.var() # close enough variance"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3a431953",
+   "id": "e9a96860",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "47635517",
+   "id": "27a8ac9b",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5f93e694",
+   "id": "d9181cf0",
    "metadata": {},
    "outputs": [
     {
@@ -742,8 +717,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "16af772c",
+   "execution_count": 71,
+   "id": "dcf41832",
    "metadata": {},
    "outputs": [
     {
@@ -752,41 +727,43 @@
        "LeveneResult(statistic=0.031071867429515194, pvalue=0.8602339200830025)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stats.levene(fe_2008, fe_1999)"
+    "#H_0\n",
+    "#Hα\n",
+    "stats.levene(fe_1999, fe_2008)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "ae760823",
+   "execution_count": 69,
+   "id": "9275fcfb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-0.3011962975077886, 0.7635345888327115)"
+       "(0.3011962975077886, 0.7635345888327115)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t, p = stats.ttest_ind(fe_2008, fe_1999)\n",
+    "t, p = stats.ttest_ind(fe_1999, fe_2008)\n",
     "t, p"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b368f8a0",
+   "id": "4af59b7c",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46528f59",
+   "id": "b5c8c009",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -815,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d867e3",
+   "id": "9118b6b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -823,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9c9bb22e",
+   "id": "d0f78890",
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4f857ca8",
+   "id": "a874e1ee",
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11cc4334",
+   "id": "d6281b0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a053c688",
+   "id": "8f78830c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b1d3db73",
+   "id": "69accd6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e5bcece8",
+   "id": "b2d91bf7",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9745c367",
+   "id": "4d577af7",
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ff37ff54",
+   "id": "ca23b054",
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "909a26f9",
+   "id": "286316be",
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "28882128",
+   "id": "c671fdb7",
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebc4ba0c",
+   "id": "372e4330",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1019,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "664bed60",
+   "id": "b75b4491",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,12 +1006,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48b68b0a",
+   "id": "91d38f5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# H_0: There is no difference in gas mileage between manual and automatic cars\n",
-    "# Hα: Manual cars get better mileage than automatic cars\n",
+    "# H_0: There is no difference in gas mileage between manual and automatic cars(!=)\n",
+    "# Hα: Manual cars get better mileage than automatic cars(==)\n",
     "    \n",
     "α = 0.05"
    ]
@@ -1042,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "9a698f9d",
+   "id": "f557266b",
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d3de769a",
+   "id": "77ba1932",
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "2e5d0052",
+   "id": "0a4536cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "2c33bc05",
+   "id": "14c5f8af",
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "f14b4964",
+   "id": "5a7c5bb8",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "7b679c90",
+   "id": "b89538c8",
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "4e09ea82",
+   "id": "8b3d1dad",
    "metadata": {},
    "outputs": [
     {
@@ -1319,29 +1296,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "43309631",
+   "execution_count": 72,
+   "id": "0e134e15",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "LeveneResult(statistic=0.013901207169738269, pvalue=0.9062462281015493)"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fail to Reject\n"
+     ]
     }
    ],
    "source": [
-    "stats.levene(fe_auto, fe_manual)"
+    "#H_0: variance is different \n",
+    "#Hα: variance is the same\n",
+    "stats.levene(fe_auto, fe_manual)\n",
+    "\n",
+    "if p < α:\n",
+    "    print('Reject the Null')\n",
+    "else:\n",
+    "    print('Fail to Reject')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "9c3aec12",
+   "id": "706a63f5",
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "734a5da1",
+   "id": "7613896c",
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1366,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2cdae0b0",
+   "id": "8bf7bdea",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "4fa6a139",
+   "id": "1571dac4",
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5828b260",
+   "id": "a30b04d6",
    "metadata": {},
    "outputs": [],
    "source": []
